tdf#113182: DOCX filter: new values of wrap property in text box

Added support of "none" and "through" values of the w:wrap
poroperty in the text box.

Change-Id: I83f0c9e8162e93bf457f228d49d3b426050d4dc6